solar-system/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-ing
  labels:
    app: solar-system
spec:
  ingressClassName: nginx
  rules:
    - host: solar.example.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: solar-system-service
                port:
                  number: 80
            path: /
